tdf#142851 Chart UI: fix empty Chart Type dialog

Chart Type dialog was empty, when the chart type of the chart
was unsupported.

Regression from commit: 4ff983b930dc15658aa531759d3f1e5b9586aeab
(Related: tdf#142049 restore some elements default visibility
in the ui)

Change-Id: I057e6b9218edee398af8311c46b922ca76a9bcb5